@@ -1,1 +1,1 @@
-indicator-china-weather_3.1.0-39_source.buildinfo utils optional
+indicator-china-weather_3.1.0-41_source.buildinfo utils optional
