@@ -1,0 +1,5 @@
+tar-ignore = build
+tar-ignore = build-*
+tar-ignore = .vscode
+tar-ignore = .git
+tar-ignore = .qmake.stash
