@@ -8,7 +8,7 @@ Comment[zh_CN]=中国实时天气
 GenericName[bo_CN]=གྱི་ལིང་གནམ་གཤིས།
 GenericName=China Weather Applet
 Keywords=weather,china
-Exec=/usr/bin/indicator-china-weather %u
+Exec=/usr/bin/indicator-china-weather  -showwindow%u
 Icon=indicator-china-weather
 Terminal=false
 Type=Application
