@@ -1,8 +1,15 @@
+indicator-china-weather (3.1.0-40) v101; urgency=medium
+  
+  * 解决了BUG#30822 点击desktop文件的时候可以拉起窗口
+  * 关于窗口适配深色&国际化&点击关于页面邮箱链接拉起邮箱客户端
+
+ -- shixiaoshuo <shixiaoshuo@kylinos.cn>  Tue,19  Jan 2021 09:46:00 +0800
+
 indicator-china-weather (3.1.0-39) v101; urgency=medium
 
   * 菜单栏按钮反白，城市和应用名字体调整大小和颜色调整为白色
 
- -- baijincheng <baijincheng@kylinos.cn>  Tue,19  Jan 2021 09:46:00 +0800
+ -- shixiaoshuo <shixiaoshuo@kylinos.cn>  Tue,19  Jan 2021 09:46:00 +0800
 
 indicator-china-weather (3.1.0-38) v101; urgency=medium
 
